fixed scrolling and other spacing issues

--- a/src/css/workExp.css
+++ b/src/css/workExp.css
@@ -1,6 +1,7 @@
 #workExpTotal {
   max-width: calc(100% - 224px);
   margin-left: 20px;
+  padding-bottom: 50px;
 }
 
 .titleAndDates {
