--- a/src/sass/endex.css
+++ b/src/sass/endex.css
@@ -259,17 +259,13 @@
 
 .display {
   margin-top: 20px;
+  height: calc(100vh - 133px);
   overflow: auto;
 }
 .display--padding {
-  padding: 100px 0 0 100px;
+  padding: 50px 0 0 100px;
 }
 
-@media only screen and (min-height: 775px) {
-  .display {
-    height: calc(100vh - 83px);
-  }
-}
 .links ul {
   list-style: none;
 }
@@ -435,6 +431,15 @@
 .noMobile {
   text-align: center;
   padding-left: 82px;
+}
+
+#skillsDisplay {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+#skillsDisplay table {
+  margin: 0;
 }
 
 .blue-BG {
